RESOLVED FIXED109489
DFG LogicalNot/Branch peephole removal and inversion ignores the possibility of things exiting
https://bugs.webkit.org/show_bug.cgi?id=109489
Summary DFG LogicalNot/Branch peephole removal and inversion ignores the possibility ...
Filip Pizlo
Reported 2013-02-11 14:23:28 PST
The solution is to perform this transformation late, when we know that the LogicalNot cannot be used by OSR.
Attachments
the wrong way (20.42 KB, patch)
2013-02-12 23:23 PST, Filip Pizlo
no flags
another wrong way (6.27 KB, patch)
2013-02-12 23:49 PST, Filip Pizlo
no flags
the patch (6.06 KB, patch)
2013-02-13 00:03 PST, Filip Pizlo
mhahnenberg: review+
webkit.review.bot: commit-queue-
Filip Pizlo
Comment 1 2013-02-12 23:23:03 PST
Created attachment 188019 [details] the wrong way I started by assuming that we should just introduce CompareNotEq and friends. I think this is not a good idea. I will do it a better way.
Filip Pizlo
Comment 2 2013-02-12 23:49:00 PST
Created attachment 188024 [details] another wrong way
Filip Pizlo
Comment 3 2013-02-13 00:03:49 PST
Created attachment 188027 [details] the patch I went for the brute force way. Still need to test if this is OK for performance... I'm also still running tests, will have expectations file soon.
WebKit Review Bot
Comment 4 2013-02-13 01:15:58 PST
Comment on attachment 188027 [details] the patch Attachment 188027 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/16530028 New failing tests: fast/js/dfg-branch-logical-not-peephole-around-osr-exit.html
Build Bot
Comment 5 2013-02-13 03:50:31 PST
Comment on attachment 188027 [details] the patch Attachment 188027 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://queues.webkit.org/results/16454796 New failing tests: fast/js/dfg-branch-logical-not-peephole-around-osr-exit.html
Mark Hahnenberg
Comment 6 2013-02-13 11:55:38 PST
Comment on attachment 188027 [details] the patch r=me with test expectations.
Filip Pizlo
Comment 7 2013-02-13 13:02:08 PST
Note You need to log in before you can comment on or make changes to this bug.