Source/JavaScriptCore/dfg/DFGFixupPhase.cpp
@@ -232,16 +232,39 @@ private:
             Node* logicalNot = node->child1().node();
             if (logicalNot->op() == LogicalNot
                 && logicalNot->adjustedRefCount() == 1) {
-                Edge newChildEdge = logicalNot->child1();
-                if (newChildEdge->hasBooleanResult()) {
-                    m_graph.ref(newChildEdge);
-                    m_graph.deref(logicalNot);
-                    node->children.setChild1(newChildEdge);
-                    
-                    BlockIndex toBeTaken = node->notTakenBlockIndex();
-                    BlockIndex toBeNotTaken = node->takenBlockIndex();
-                    node->setTakenBlockIndex(toBeTaken);
-                    node->setNotTakenBlockIndex(toBeNotTaken);
+                
+                // Make sure that OSR exit can't observe the LogicalNot. If it can,
+                // then we must compute it and cannot peephole around it.
+                bool found = false;
+                bool ok = true;
+                for (unsigned i = m_indexInBlock; i--;) {
+                    Node* candidate = m_block->at(i);
+                    if (!candidate->shouldGenerate())
+                        continue;
+                    if (candidate == logicalNot) {
+                        found = true;
+                        break;
+                    }
+                    if (candidate->canExit()) {
+                        ok = false;
+                        found = true;
+                        break;
+                    }
+                }
+                ASSERT_UNUSED(found, found);
+                
+                if (ok) {
+                    Edge newChildEdge = logicalNot->child1();
+                    if (newChildEdge->hasBooleanResult()) {
+                        m_graph.ref(newChildEdge);
+                        m_graph.deref(logicalNot);
+                        node->children.setChild1(newChildEdge);
+                        
+                        BlockIndex toBeTaken = node->notTakenBlockIndex();
+                        BlockIndex toBeNotTaken = node->takenBlockIndex();
+                        node->setTakenBlockIndex(toBeTaken);
+                        node->setNotTakenBlockIndex(toBeNotTaken);
+                    }
                 }
             }
             break;
